# uv-lens

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  publish.yml
.trae/documents/: Add progress indicator for network requests in check command.md  uv-lens-测试设计方案.md  uv-lens-解析-pyproject-依赖并对比最新版本.md  完成 uv-lens 发布配置与验证.md
src/: main.py
src/uv_lens/: __init__.py  app.py  cache.py  cli.py  config.py  formatters.py  index_client.py  models.py  names.py  pyproject.py  report.py  resolver.py  tui.py  updater.py  uv_commands.py  versions.py
tests/: test_app.py  test_cache.py  test_cache_more.py  test_cli.py  test_config.py  test_formatters.py  test_index_client.py  test_index_client_more.py  test_pyproject.py  test_resolver.py  test_tui.py  test_tui_actions.py  test_updater.py  test_uv_commands.py  test_versions.py
