[project]
name = "uv-lens"
version = "0.1.0"
description = "解析 pyproject.toml 依赖并查询最新稳定版本，输出升级建议与 uv add 命令"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["uv", "pypi", "dependencies", "tui", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "packaging>=24",
    "pyyaml>=6",
    "rich>=13",
    "textual>=0.60",
    "tomlkit>=0.13",
]

[project.scripts]
uv-lens = "uv_lens.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
